# chess-dl

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  board_renderer.py  config.py  coord.py  engine.py  environment.yml  main.py  requirements.txt  sdl_board_renderer.py  sdl_window.py  setup.py  state.py
Assets/: credits.md  sprites.spritepack  sprites.xcf
CppChessLib/: CMakeLists.txt  CMakeSettings.json  CppChessLib.sln
CppChessLib/CppChessLib/: CppChessLib.cpp  CppChessLib.vcxproj  CppChessLib.vcxproj.filters  bitboard.cpp  bitboard.h  bitboard.hpp  bitscan.h  bitscan.hpp  chess.cpp  chess.h  cpp.hint  mailbox.hpp  move.hpp  piece.hpp  position_index.hpp  resource.h  util.hpp
CppChessLib/Train/: CMakeLists.txt  Train.cpp  pgn_minify.cpp  pgn_minify.sh  populate_volume.sh
CppChessLib/tests/: test_bb.cpp  test_bitscan.cpp  test_mailbox.cpp  test_move.cpp  test_perft.cpp  tests.vcxproj  tests.vcxproj.filters  visual.h
backend/: CMakeLists.txt  bitboard.cpp  bitboard.hpp  bitscan.hpp  board.cpp  board.hpp  chess.cpp  chess.h  chess.hpp  coord.hpp  fen.hpp  mailbox.hpp  move.hpp  perft.cpp  perft.hpp  pext_attacks.cpp  pext_attacks.hpp  piece.hpp  position_index.hpp  square.hpp  zobrist_hash.cpp  zobrist_hash.hpp
backend/demo/: CMakeLists.txt  demo.cpp
backend/tests/: CMakeLists.txt  test_bb.cpp  test_bitscan.cpp  test_board.cpp  test_hash.cpp  test_mailbox.cpp  test_move.cpp  test_parse_move.cpp  test_perft.cpp  test_pext_attacks.cpp  tests.hpp
catch2/: catch.hpp
demos/: CMakeLists.txt
demos/backend/: CMakeLists.txt  demo.cpp
demos/engine/: CMakeLists.txt  demo.cpp
engine/: CMakeLists.txt  endgame_table.hpp  engine.cpp  engine.hpp  eval.cpp  eval.hpp  lambda_engine.cpp  lambda_engine.hpp  opening_book.cpp  opening_book.hpp  random_engine.hpp
engine/demo/: CMakeLists.txt  demo.cpp
engine/tests/: CMakeLists.txt  test_opening_book.cpp
frontend/: board_renderer.py  config.py  coord.py  engine.py  environment.yml  main.py  requirements.txt  sdl_board_renderer.py  sdl_window.py  state.py
frontend/Assets/: credits.md  sprites.spritepack
include/chess/backend/: bitboard.hpp  bitscan.hpp  board.hpp  coord.hpp  fen.hpp  move.hpp  perft.hpp  pext_attacks.hpp  piece.hpp  square.hpp  zobrist_hash.hpp
include/chess/engine/: endgame_table.hpp  engine.hpp  eval.hpp  opening_book.hpp
include/chess/train/datasets/: CHESS.hpp
include/chess/train/datasets/meta/: train.txt
include/chess/utils/: utils.hpp
include/train/datasets/: CHESS.hpp
pgn_minify/: pgn_minify.py
setup/: CMakeLists.txt  get_pgn_data.sh  get_pgn_data_background.sh  pgn_minify.cpp  pgn_urls_2  readme.md  test_throttling.sh
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  bitboard.cpp  board.cpp  perft.cpp  pext_attacks.cpp  zobrist_hash.cpp
src/engine/: CMakeLists.txt  engine.cpp  eval.cpp  lambda_engine.cpp  opening_book.cpp
src/setup/: CMakeLists.txt  pgn_minify.cpp  pgn_urls_1
src/train/: CMakeLists.txt  train.cpp
src/train/datasets/: CHESS.cpp
tests/backend/: CMakeLists.txt  test_bb.cpp  test_bitscan.cpp  test_board.cpp  test_hash.cpp  test_move.cpp  test_parse_move.cpp  test_perft.cpp  test_pext_attacks.cpp  tests.hpp
tests/engine/: CMakeLists.txt  test_opening_book.cpp
train/: CMakeLists.txt  train.cpp
train/datasets/: CHESS.cpp  CHESS.hpp  chess.cpp  chess.hpp
train/datasets/meta/: debug.txt  test.txt  valid.txt
utils/: utils.hpp
